# Theme-o-rama

./: .editorconfig  .eslintignore  .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  build.sh  clean-build.sh  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish.sh  tailwind.config.js  vite.config.ts  vite.config.web.ts
.github/workflows/: ci.yml
docs/: index.html
docs/assets/: core-DdI4Y3zP.js  index--t5GSj8i.js  index-19MlyShj.js  index-9X47HWSm.js  index-B58Mm0Z7.js  index-BBP-ThmC.js  index-BGCRbrfQ.css  index-BHQ8J1N8.js  index-BHWx7Nrw.js  index-BLTwMVtC.css  index-BN7C_7MR.js  index-BRr0-qoj.js  index-BUywfoHG.js  index-BZVWxeB_.js  index-B_31pNc7.css  index-BewwycWd.js  index-Blrxlcup.js  index-BpEkz866.js  index-BqeoQJJf.css  index-C3jMAfEv.js  index-CLDWoCYR.js  index-CLyiA9Fx.css  index-CQRSqm3W.css  index-CTRJ-NtQ.css  index-CULJ1P-w.css  index-CVc95CXv.js  index-C_CrB8fx.js  index-C_EEm-1Y.js  index-CazyCFyN.js  index-CczoD_sw.css  index-CfXdL3k9.js  index-Cfzv0zk8.js  index-ClRxJeiC.css  index-CpKwNY6r.css  index-CsDVjFTD.js  index-CsRVrAIu.js  index-CsgGRPNB.js  index-Cy938JsS.js  index-CyVTeH1o.js  index-CzvmO5of.js  (+91 more)
examples/nextjs/: PAGES_ROUTER_EXAMPLE.md  README.md  SETUP.md  TAILWIND_V4_MIGRATION.md  TESTING.md  next.config.ts  package.json
examples/nextjs-pages/: README.md  next.config.ts  package.json  pnpm-lock.yaml
examples/tauri/: .eslintrc.cjs  .prettierignore  package.json  pnpm-lock.yaml  publish.sh  tailwind.config.js  tsconfig.json
examples/tauri/src-tauri/: Cargo.toml
src/: App.tsx  README.md  bindings.ts  build.sh  eslint.config.cjs  index.css  package-lock.json  package.json  pnpm-lock.yaml  state.ts  tailwind.config.js  vitest.config.ts
src-lib/: .gitignore  README.md  build.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src-lib/src/: color.json  index.ts  schema.json  theme-cache.ts  theme-context.tsx  theme-loader.ts  theme-schema-validation.ts  theme.ts  theme.type.ts  themes.css  utils.ts
src-nextjs/: .npmrc  PAGES_ROUTER_EXAMPLE.md  TAILWIND_V4_MIGRATION.md  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts
src-nextjs-pages/: package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs
src/components/: BackgroundImageEditor.tsx  ColorPicker.tsx  Header.tsx  Layout.tsx  Nav.tsx  ThemeCard.tsx  (+4 more)
(+129 files in other folders)
